<resources>
    <string name="app_name">Викторина по знанию флагов</string>
    <string name="action_settings">Настройки</string>
    <string name="number_of_choices">Количество вариантов</string>
    <string name="number_of_choices_description">Отразить 2, 4, 6 из 8 вариантов выбора</string>
    <string name="world_regions">Регион</string>
    <string name="world_regions_description">Регионы для включения в викторину</string>
    <string name="number_of_cvest">Количество вопросов</string>
    <string name="number_cvest">Выбирите количество вопросов</string>
    <string name="guess_country">Угадай страну</string>
    <string name="results">%1$d попыток, %2$.02f%% правильно</string>
    <string name="incorrect_answer">Ошибка!</string>
    <string name="default_region_message">
        Должен быть выбран один регион. Регион по умолчанию - Europe.
    </string>
    <string name="restarting_quiz">Викторина перезапустится с вашими новыми настройками.</string>
    <string name="question">Вопрос %1$d из %2$d</string>
    <string name="reset_quiz">Начать заного</string>
    <string name="image_description">Изображение текущего флага в викторине</string>
    <string name="default_region">Europe</string>
    <string name="title_activity_settings">Настройки</string>

</resources>
